@@ -150,7 +150,7 @@ public class RegistroEstudiantes {
             if (os.contains("Windows")) {
                 new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
             } else {
-                Runtime.getRuntime().exec("clear");
+                new ProcessBuilder("clear").inheritIO().start().waitFor();
             }
         } catch (final Exception e) {
             System.out.println("Error al limpiar la consola: " + e.getMessage());
